--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -13,11 +13,7 @@ on:
         - warning
         - debug
 
-env:
-  MODULES_CONFIG: ""    # Updated by the python script to contain a json list of modules and any other relevant data (versions, tests etc..)
-
 jobs:
-
   build_configuration:
     name: Build Configuration
     runs-on: ubuntu-latest
@@ -31,8 +27,6 @@ jobs:
         all_changed_files: ${{ steps.build_changed_files.outputs.changed_files }}                 # diff of all current files that have changed. ALso used to build a configuration on if a module has tests to run
         modules_configuration: ${{ steps.build_tests_matrix_includes.outputs.MODULES_CONFIG }}    # configuration of module information for any that have had file changes made. Consists of the module name and a list of tests, if present. Future additions will be to detect the current module version and predict the next version to use if all tests pass
         tests_matrix: ${{ steps.build_tests_matrix_includes.outputs.TESTS_MATRIX_OUTPUT }}        # matrix of tests to run against changed modules
-    #env:
-    #  NBS_MODULE_MATRIX_NAME: "MODULES_MATRIX"                # Defines the variable name in GITHUB_OUTPUT that the python modules script outputs the data to
     steps:
       - id: checkout-codebase
         name: Checks out the codebase as needed. If this is a PR then it uses a fetch-depth of 2 to determine the changes. Otherwise the fetch-depth is 0 to get the full git history
@@ -84,7 +78,7 @@ jobs:
           app.output_logging()
           
           # Build the modules config
-          # Automatically pushes the configuration to env.MODULES_CONFIG so it can be used in other jobs/steps
+          # Automatically pushes the configuration to GITHUB_OUTPUT so it can be used in other jobs/steps
           app.build_modules_config("${{ steps.build_changed_files.outputs.changed_files }}", "MODULES_CONFIG")
           
           # Build the tests include matrix config. Automatically pushes the result to GITHUB_OUTPUT
@@ -116,4 +110,4 @@ jobs:
       - run: |
           echo "For Module: ${{matrix.module}} Running Test: ${{matrix.test}}"  
       - run: |
-          echo "Debug test to check that the modules_config env var has been set and is available: ${{ needs.build_configuration.outputs.modules_configuration }}""
+          echo "Debug on modules_configuration variable: ${{ needs.build_configuration.outputs.modules_configuration }}"
