--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -13,6 +13,10 @@ on:
         - warning
         - debug
 
+env:
+  myvar: "123"
+  myvar2: ""
+
 jobs:
   build_configuration:
     name: Build Configuration
@@ -92,6 +96,21 @@ jobs:
         run: |
           echo "${{ steps.build_tests_matrix_includes.outputs.MODULES_CONFIG }}"
           echo "${{ steps.build_tests_matrix_includes.outputs.TESTS_MATRIX_OUTPUT }}"
+      - shell: python
+        run: |
+          import os
+          env_file = os.getenv('GITHUB_ENV')
+          with open(env_file, "a") as myfile:
+              myfile.write("myvar2=UPDATED_BY_PYTHON")
+      - name: DEBUG - Show the environment variables
+        run: |
+          env
+          echo ${{ env.myvar }}
+          echo ${{ env.myvar2 }}
+          echo "myvar=UPDATED" >> $GITHUB_ENV
+      - run: |
+          echo ${{ env.myvar }}
+        
           
 
   run_module_tests:
@@ -125,3 +144,8 @@ jobs:
       # debug
       - run: |
           echo "Debug on modules_configuration variable: ${{ needs.build_configuration.outputs.modules_configuration }}"
+
+  test_update_modules_config:
+    name: Testing updating the modules_config
+    needs: [run_module_tests]
+    runs-on: ubuntu-latest
