--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -92,6 +92,10 @@ jobs:
         run: |
           echo "${{ steps.build_tests_matrix_includes.outputs.MODULES_CONFIG }}"
           echo "${{ steps.build_tests_matrix_includes.outputs.TESTS_MATRIX_OUTPUT }}"
+      - id: testing PyGithub
+        name: Testing PyGithub
+        run: |
+          python -c "import os; from github import Github; g = Github(os.environ['GITHUB_TOKEN']); print(g.get_user())"
 
 
   run_module_tests:
