--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
+# Created by venv; see https://docs.python.org/3/library/venv.html
 mylogfile
 *.log
 gha_matrix_logs
 testcat*
 reports/*
 json/*
+
+# venv
+venv
