--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -72,6 +72,8 @@ jobs:
           python -c "import sys; import os; print('\n'.join(sys.path)); print(os.getcwd())"
       - id: build_tests_matrix_includes
         name: Run a python script inline to convert a bash space deparated string into a json list
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         shell: python
         run: |
           # codepath isn't in PYTHONPATH
@@ -95,7 +97,7 @@ jobs:
           # Build the tests include matrix config. Automatically pushes the result to GITHUB_OUTPUT
           app.build_tests_matrix_config()
           app.get_modules_tag("module1")
-          
+
       - id: debug_show_modules_config
         name: Check the modules config output is correct
         run: |
